[package]
name = "runtome"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "runtome-server"
path = "src/server.rs"

[[bin]]
name = "runtome"
path = "src/client.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
awc = "2"
p12 = "0.6.0"
futures = "0.3.1"
bytes = "0.5.3"
env_logger = "0.8"
lapin = "2.0.1"
futures-lite = "1.12.0"
tracing = "0.1.30"
async-global-executor = "2.0.2"
deadpool-lapin = { version = "0.9.1", features = ["rt_async-std_1"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
clap = { version = "3.1.2", features = ["derive"] }
# encryption
x25519-dalek = "1"
rand_core = { version = "0.5", default-features = false }
rand = "0.8.5"
aes-gcm = "0.9.4"
base64 = "0.13.0"
