[package]
name = "rusty-mole"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mole-boss"
path = "src/mole_boss.rs"

[[bin]]
name = "mole-minion"
path = "src/mole_minion.rs"

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-web = { version = "3", features = ["openssl"] }
actix-web-actors = "3"
actix-files = "0.3"
awc = "2"
p12 = "0.6.0"
futures = "0.3.1"
bytes = "0.5.3"
log = "0.4"
env_logger = "0.8"
lapin = "2.0.1"
futures-lite = "1.12.0"
tracing = "0.1.30"
async-global-executor = "2.0.2"
deadpool-lapin = { version = "0.9.1", features = ["rt_async-std_1"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
ureq = "2.4.0"
qstring = "0.7.2"
clap = { version = "3.1.2", features = ["derive"] }
chrono = "0.4"
# encryption
x25519-dalek = "1"
rand_core = { version = "0.5", default-features = false }
rand = "0.8.5"
aes-gcm = "0.9.4"
base64 = "0.13.0"
