[package]
name = "rusty-mole"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mole-boss"
path = "src/mole_boss.rs"

[[bin]]
name = "mole-minion"
path = "src/mole_minion.rs"

[dependencies]
actix = "0.13"
actix-codec = "0.5"
actix-files = "0.6"
actix-rt = "2"
actix-web = "4"
actix-web-actors = "4.1"
awc = "3.0.0-beta.21"

p12 = "0.6.0"
futures = { version = "0.3.1", features = ["thread-pool"] }
bytes = "0.5.3"
log = "0.4"
env_logger = "0.9"
tokio = { version = "1.13.1", features = ["full"] }
tokio-stream = "0.1.8"

lapin = "2.0.1"
futures-lite = "1.12.0"
futures-util = { version = "0.3.7", default-features = false, features = ["std", "sink"] }

tracing = "0.1.30"
async-global-executor = "2.0.2"
deadpool-lapin = { version = "0.9.1", features = ["rt_async-std_1"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
ureq = "2.4.0"
qstring = "0.7.2"
clap = { version = "3.1.2", features = ["derive"] }
chrono = "0.4"
# encryption
x25519-dalek = "1"
rand_core = { version = "0.5", default-features = false }
rand = "0.8.5"
aes-gcm = "0.9.4"
base64 = "0.13.0"
